K8S/authservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-depl
  labels:
    app: authservice
spec:
  selector:
    matchLabels:
      app: authservice
  replicas: 1
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: gokulcapstoneproject.azurecr.io/authservice:latest
          ports:
            - containerPort: 80
              name: authservice
---
apiVersion: v1
kind: Service
metadata:
  name: authservice-clusterip-srv
spec:
  selector:
    app: authservice
  type: ClusterIP
  ports:
    - name: authservice
      protocol: TCP
      port: 80
      targetPort: 80
