K8S/ocelot-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apigateway-depl
    labels:
        app: apigateway
spec:
    replicas: 1
    selector:
        matchLabels:
            app: apigateway
    template:
        metadata:
            labels:
                app: apigateway
        spec:
            containers:
                - name: apigateway
                  image: gokulcapstoneproject.azurecr.io/apigateway:latest
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: ocelot-config
                        mountPath: /app/ocelot.json
                        subPath: ocelot.json
            volumes:
                - name: ocelot-config
                  configMap:
                      name: ocelot-config
---
apiVersion: v1
kind: Service
metadata:
    name: apigateway-clusterip-srv
spec:
    selector:
        app: apigateway
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: apigateway-loadbalancer
spec:
    selector:
        app: apigateway
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
