K8S/premiumservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: premiumservice-depl
  labels:
    app: premiumservice
spec:
  selector:
    matchLabels:
      app: premiumservice
  replicas: 1
  template:
    metadata:
      labels:
        app: premiumservice
    spec:
      containers:
        - name: premiumservice
          image: gokulcapstoneproject.azurecr.io/premiumservice:latest
          ports:
            - containerPort: 80
              name: premiumservice
---
apiVersion: v1
kind: Service
metadata:
  name: premiumservice-clusterip-srv
spec:
  selector:
    app: premiumservice
  type: ClusterIP
  ports:
    - name: premiumservice
      protocol: TCP
      port: 80
      targetPort: 80
