K8S/profileservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profileservice-depl
  labels:
    app: profileservice
spec:
  selector:
    matchLabels:
      app: profileservice
  replicas: 1
  template:
    metadata:
      labels:
        app: profileservice
    spec:
      containers:
        - name: profileservice
          image: gokulcapstoneproject.azurecr.io/profileservice:latest
          ports:
            - containerPort: 80
              name: profileservice
---
apiVersion: v1
kind: Service
metadata:
  name: profileservice-clusterip-srv
spec:
  selector:
    app: profileservice
  type: ClusterIP
  ports:
    - name: profileservice
      protocol: TCP
      port: 80
      targetPort: 80
