K8S/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apigateway-loadbalancer
                port:
                  number: 80
